--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,18 +4,8 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                 sh 'make'
-                echo 'Building..'
-            }
-        }
-        stage('Test') {
-            steps {
-                echo 'Testing..'
-            }
-        }
-        stage('Deploy') {
-            steps {
-                echo 'Deploying....'
+                sh 'make' 
+                archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true 
             }
         }
     }
