--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,14 +1,24 @@
 pipeline {
-    agent any
-
+    agent any 
+    environment {
+        // Using returnStdout
+        CC = """${sh(
+                returnStdout: true,
+                script: 'echo "clang"'
+            )}""" 
+        // Using returnStatus
+        EXIT_STATUS = """${sh(
+                returnStatus: true,
+                script: 'exit 1'
+            )}"""
+    }
     stages {
-        stage('Test') {
+        stage('Example') {
+            environment {
+                DEBUG_FLAGS = '-g'
+            }
             steps {
-                /* `make check` returns non-zero on test failures,
-                * using `true` to allow the Pipeline to continue nonetheless
-                */
-                sh 'make check || true' 
-                junit '**/target/*.xml' 
+                sh 'printenv'
             }
         }
     }
